--- a/themes/next/source/404.html
+++ b/themes/next/source/404.html
@@ -9,7 +9,7 @@
 <body>
 
 <script type="text/javascript" src="http://www.qq.com/404/search_children.js"
-        charset="utf-8" homePageUrl="zhangxd.cn"
+        charset="utf-8" homePageUrl="http://zhangxd.cn"
         homePageName="回到我的主页">
 </script>
 
